--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my project</title>
+    <title>illustration portfolio</title>
+    <link rel="stylesheet" href="./style/style.css" />
+    <script src="./script/index.js" defer></script>
   </head>
   <body>
-    <h1>test</h1>
+    <div class="navigation">
+      <div class="navigation_top">
+        <div class="list">Illustration</div>
+        <div class="list">
+          <img class="img" src="../../../../src_img/leaf-icon.png" />
+        </div>
+        <div class="navigation_list">
+          <img class="list listimg" src="../../../../src_img/bell-icon.png" />
+          <img class="list listimg" src="../../../../src_img/user-icon.png" />
+          <img class="list listimg" src="../../../../src_img/menu-icon.png" />
+        </div>
+      </div>
+    </div>
+    <!--네비게이션 완료되었습니다 건들지 마세요-->
+    <div class="container">
+      <div class="slide slide_wrap">
+        <div class="slide_item item1">1</div>
+        <div class="slide_item item2">2</div>
+        <div class="slide_item item3">3</div>
+
+        <div class="slide_prev_button slide_button">◀</div>
+        <div class="slide_next_button slide_button">▶</div>
+        <ul class="slide_pagination"></ul>
+      </div>
+      <script src="./slide.js"></script>
+    </div>
   </body>
 </html>
