네비게이션반응완료+슬라이드살짝고침

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
           <img class="img" src="../../../../src_img/leaf-icon.png" />
         </div>
         <div class="navigation_list">
-          <img class="list listimg" src="../../../../src_img/bell-icon.png" />
-          <img class="list listimg" src="../../../../src_img/user-icon.png" />
-          <img class="list listimg" src="../../../../src_img/menu-icon.png" />
+          <div class="navigation_list navigation_list-icon">
+            <img class="list listimg" src="../../../../src_img/bell-icon.png" />
+            <img class="list listimg" src="../../../../src_img/user-icon.png" />
+            <img class="list listimg" src="../../../../src_img/menu-icon.png" />
+          </div>
+
+          <div class="navigation_list menuimg">
+            <img id="listimg-menu" src="../../../../src_img/menu-icon.png" />
+          </div>
         </div>
       </div>
     </div>
