--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>illustration portfolio</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/card.css" />
+
     <script src="./script/index.js" defer></script>
   </head>
   <body>
     <div class="navigation">
       <div class="navigation_top">
-        <div class="list">Illustration</div>
+        <div class="list list_text-il">Illustration</div>
         <div class="list">
           <img class="img" src="../../../../src_img/leaf-icon.png" />
         </div>
         <div class="navigation_list">
           <div class="navigation_list navigation_list-icon">
             <img class="list listimg" src="../../../../src_img/bell-icon.png" />
+
             <img class="list listimg" src="../../../../src_img/user-icon.png" />
             <img class="list listimg" src="../../../../src_img/menu-icon.png" />
           </div>
@@ -27,18 +30,105 @@
         </div>
       </div>
     </div>
-    <!--네비게이션 완료되었습니다 건들지 마세요-->
+
     <div class="container">
       <div class="slide slide_wrap">
-        <div class="slide_item item1">1</div>
-        <div class="slide_item item2">2</div>
-        <div class="slide_item item3">3</div>
+        <div class="slide_item item1">
+          <img class="slideimg" src="../../../../src_img/slide-1.jpg" />
+        </div>
+        <div class="slide_item item2">
+          <img class="slideimg" src="../../../../src_img/slide-2.jpg" />
+        </div>
+        <div class="slide_item item3">
+          <img class="slideimg" src="../../../../src_img/slide-3.jpg" />
+        </div>
 
         <div class="slide_prev_button slide_button">◀</div>
         <div class="slide_next_button slide_button">▶</div>
         <ul class="slide_pagination"></ul>
       </div>
       <script src="./slide.js"></script>
+    </div>
+    <div class="section">
+      <div class="card">
+        <img class="card__img" src="../../../../src_img/red_ill.jpg" />
+        <div class="card__bottom">
+          <div class="card__title">On View</div>
+          <div class="card__subtitle">Folder</div>
+          <div class="card__title">2023 Dec / Digital Illustration</div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card__img" src="../../../../src_img/blue_ill.jpg" />
+        <div class="card__bottom">
+          <div class="card__title">On View</div>
+          <div class="card__subtitle">subtitle</div>
+          <div class="card__title">2023 Jun / hand drawn Illustration</div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card__img" src="../../../../src_img/green_ill.jpg" />
+        <div class="card__bottom">
+          <div class="card__title">On View</div>
+          <div class="card__subtitle">subtitle</div>
+          <div class="card__title">2023 Dec / Digital Illustration</div>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card__img" src="../../../../src_img/tree_ill.png" />
+        <div class="card__bottom">
+          <div class="card__title">On View</div>
+          <div class="card__subtitle">subtitle</div>
+          <div class="card__title">2023 Jun / hand drawn Illustration</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer">
+      <div class="footer_menu">
+        <div class="lefttext_1">
+          <button class="memebtn" onclick="location.href='meme.html'">
+            <img class="listimg" src="../../../../src_img/smile-icon.png" />
+          </button>
+        </div>
+        <div class="lefttext_2">Portfolio</div>
+        <div class="lefttext_3">
+          <img class="listimg" src="../../../../src_img/c-icon.png" />
+        </div>
+      </div>
+      <div class="text">
+        End Of Lecture : 2024 / 06 / 20 ㅤ Class Name : Web Media Design
+      </div>
+      <div class="text">
+        creator : Communication Design 202220249 Kim Hye Jin
+      </div>
+      <div class="text">E-mail : kkimhj030417@gmail.com</div>
+      <div class="text">
+        hello! I want to add something more, but I don't know what to add... But
+        wouldn't it be better if I wrote it in English?
+      </div>
+      <div class="footer_hlicon">
+        <div class="hlicon">
+          <a href="https://www.instagram.com/soldout0417/"
+            ><img class="bottomicon" src="../../../../src_img/in-icon.png"
+          /></a>
+        </div>
+        <div class="hlicon">
+          <a href="https://github.com/SANGMYUNGHYEJIN/WMD_project"
+            ><img class="bottomicon" src="../../../../src_img/git-icon.png"
+          /></a>
+        </div>
+        <div class="hlicon">
+          <a href="https://www.youtube.com/channel/UC_N-OlFuD4pk_CwLYI_lYWQ"
+            ><img class="bottomicon" src="../../../../src_img/you-icon.png"
+          /></a>
+        </div>
+      </div>
+    </div>
+    <div class="btn">
+      <a href="https://sangmyunghyejin.github.io/WMD_project/"
+        ><img class="btnimg" src="../../../../src_img/arrow-icon.png"
+      /></a>
     </div>
   </body>
 </html>
