다른 테스트

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card__img" src="./src_img/tree_ill.png" />
+        <img class="card__img" src="../WMD_project/src_img/tree_ill.png" />
         <div class="card__bottom">
           <div class="card__title">On View</div>
           <div class="card__subtitle">subtitle</div>
