--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
       <div class="navigation_top">
         <div class="list list_text-il">Illustration</div>
         <div class="list">
-          <img class="img" src="../../../../src_img/leaf-icon.png" />
+          <img class="img" src="./asset/leaf-icon.png" />
         </div>
         <div class="navigation_list">
           <div class="navigation_list navigation_list-icon">
-            <img class="list listimg" src="../../../../src_img/bell-icon.png" />
+            <img class="list listimg" src="./asset/bell-icon.png" />
 
-            <img class="list listimg" src="../../../../src_img/user-icon.png" />
-            <img class="list listimg" src="../../../../src_img/menu-icon.png" />
+            <img class="list listimg" src="./asset/user-icon.png" />
+            <img class="list listimg" src="./asset/menu-icon.png" />
           </div>
 
           <div class="navigation_list menuimg">
-            <img id="listimg-menu" src="../../../../src_img/menu-icon.png" />
+            <img id="listimg-menu" src="./asset/menu-icon.png" />
           </div>
         </div>
       </div>
@@ -34,13 +34,13 @@
     <div class="container">
       <div class="slide slide_wrap">
         <div class="slide_item item1">
-          <img class="slideimg" src="../../../../src_img/slide-1.jpg" />
+          <img class="slideimg" src="./asset/slide-1.jpg" />
         </div>
         <div class="slide_item item2">
-          <img class="slideimg" src="../../../../src_img/slide-2.jpg" />
+          <img class="slideimg" src="./asset/slide-2.jpg" />
         </div>
         <div class="slide_item item3">
-          <img class="slideimg" src="../../../../src_img/slide-3.jpg" />
+          <img class="slideimg" src="./asset/slide-3.jpg" />
         </div>
 
         <div class="slide_prev_button slide_button">◀</div>
@@ -51,7 +51,7 @@
     </div>
     <div class="section">
       <div class="card">
-        <img class="card__img" src="../../../../src_img/red_ill.jpg" />
+        <img class="card__img" src="./asset/red_ill.jpg" />
         <div class="card__bottom">
           <div class="card__title">On View</div>
           <div class="card__subtitle">Folder</div>
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="card">
-        <img class="card__img" src="../../../../src_img/blue_ill.jpg" />
+        <img class="card__img" src="./asset/blue_ill.jpg" />
         <div class="card__bottom">
           <div class="card__title">On View</div>
           <div class="card__subtitle">subtitle</div>
@@ -88,12 +88,12 @@
       <div class="footer_menu">
         <div class="lefttext_1">
           <button class="memebtn" onclick="location.href='meme.html'">
-            <img class="listimg" src="../../../../src_img/smile-icon.png" />
+            <img class="listimg" src="./asset/smile-icon.png" />
           </button>
         </div>
         <div class="lefttext_2">Portfolio</div>
         <div class="lefttext_3">
-          <img class="listimg" src="../../../../src_img/c-icon.png" />
+          <img class="listimg" src="./asset/c-icon.png" />
         </div>
       </div>
       <div class="text">
@@ -110,24 +110,24 @@
       <div class="footer_hlicon">
         <div class="hlicon">
           <a href="https://www.instagram.com/soldout0417/"
-            ><img class="bottomicon" src="../../../../src_img/in-icon.png"
+            ><img class="bottomicon" src="./asset/in-icon.png"
           /></a>
         </div>
         <div class="hlicon">
           <a href="https://github.com/SANGMYUNGHYEJIN/WMD_project"
-            ><img class="bottomicon" src="../../../../src_img/git-icon.png"
+            ><img class="bottomicon" src="./asset/git-icon.png"
           /></a>
         </div>
         <div class="hlicon">
           <a href="https://www.youtube.com/channel/UC_N-OlFuD4pk_CwLYI_lYWQ"
-            ><img class="bottomicon" src="../../../../src_img/you-icon.png"
+            ><img class="bottomicon" src="./asset/you-icon.png"
           /></a>
         </div>
       </div>
     </div>
     <div class="btn">
       <a href="https://sangmyunghyejin.github.io/WMD_project/"
-        ><img class="btnimg" src="../../../../src_img/arrow-icon.png"
+        ><img class="btnimg" src="./asset/arrow-icon.png"
       /></a>
     </div>
   </body>
