--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="navigation_top">
         <div class="list list_text-il">Illustration</div>
         <div class="list">
-          <img class="img" src="./asset/arrow-icon.png" />
+          <img class="img" src=".././asset/leaf-icon.png" />
         </div>
         <div class="navigation_list">
           <div class="navigation_list navigation_list-icon">
