두개만 더 하면 끝

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
     </div>
     <div class="section">
       <div class="card">
-        <img class="card__img" src="./asset/red_ill.jpg" />
+        <a href="red.html"
+          ><img class="card__img" src="./asset/red_ill.jpg"
+        /></a>
+
         <div class="card__bottom">
           <div class="card__title">On View</div>
           <div class="card__subtitle">Folder</div>
@@ -59,10 +62,12 @@
         </div>
       </div>
       <div class="card">
-        <img class="card__img" src="./asset/blue_ill.jpg" />
+        <a href="blue.html"
+          ><img class="card__img" src="./asset/blue_ill.jpg"
+        /></a>
         <div class="card__bottom">
           <div class="card__title">On View</div>
-          <div class="card__subtitle">subtitle</div>
+          <div class="card__subtitle">전경</div>
           <div class="card__title">2023 Jun / hand drawn Illustration</div>
         </div>
       </div>
