--- a/meme.html
+++ b/meme.html
@@ -9,13 +9,13 @@
   <body>
     <h1>Cording Meme Page</h1>
     <div class="memerealimg">
-      <img src="../../../../src_img/margin_45px.jpg" />
+      <img src="./asset/margin_45px.jpg" />
     </div>
     <div class="memerealimg">
-      <img src="../../../../src_img/mango.jpg" />
+      <img src="./asset/mango.jpg" />
     </div>
     <div class="memerealimg">
-      <img src="../../../../src_img/parrot.jpg" />
+      <img src="./asset/parrot.jpg" />
     </div>
   </body>
 </html>
