반드시 해야하는 건 완료

--- a/index.html
+++ b/index.html
@@ -72,18 +72,23 @@
         </div>
       </div>
       <div class="card">
-        <img class="card__img" src="./asset/green_ill.jpg" />
+        <a href="green.html"
+          ><img class="card__img" src="./asset/green_ill.jpg"
+        /></a>
         <div class="card__bottom">
           <div class="card__title">On View</div>
-          <div class="card__subtitle">subtitle</div>
+          <div class="card__subtitle">아프지 맙시다</div>
           <div class="card__title">2023 Dec / Digital Illustration</div>
         </div>
       </div>
       <div class="card">
-        <img class="card__img" src="./asset/tree-ill.png" />
+        <a href="tree.html">
+          <img class="card__img" src="./asset/tree-ill.png"
+        /></a>
+
         <div class="card__bottom">
           <div class="card__title">On View</div>
-          <div class="card__subtitle">subtitle</div>
+          <div class="card__subtitle">미래</div>
           <div class="card__title">2023 Jun / hand drawn Illustration</div>
         </div>
       </div>
