--- a/green.html
+++ b/green.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Illustration-전경</title>
+    <title>Illustration-아프지 맙시다</title>
     <link rel="stylesheet" href="./style/greenstyle.css" />
   </head>
   <body>
